fix:fix sizing to show on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 .menu,
 .quiz,
 .score {
-  width: 600px;
+  width: 400px;
   height: 600px;
   background: lightblue;
   border-radius: 10px;
@@ -42,8 +42,8 @@
   cursor: pointer;
 }
 .quiz button {
-  width: 500px;
-  height: 50px;
+  width: 300px;
+  height: 100px;
   margin: 5px;
   border: none;
   border-radius: 5px;
